2004-10-26  Ben Wing  <ben@xemacs.org>

	* configure.in (AC_INIT_NOTICE):
	* configure.in (TAB):
	* configure.in (XE_COMPUTE_RUNPATH):
	Turn off -Winline and -Wchar-subscripts.
	Use the right set of cflags when compiling modules.
	Rewrite ldap configuration to separate the inclusion of lber
	(needed in recent Cygwin) from the basic checks for the
	needed libraries.
	add a function for MAKE_JUNK_C; initially code was added to
	generate xemacs.def using this, but it will need to be rewritten.
	add an rm -f for junk.c to avoid weird Cygwin bug with cp -f onto
	an existing file.
	Sort list of auto-detected functions and eliminate unused checks for
	stpcpy,	setlocale and getwd.
	Add autodetection of Cygwin scanf problems

2004-10-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.18 "chestnut" is released.

2004-10-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* CHANGES-beta: Update for release.

2004-09-29  Jerry James  <james@xemacs.org>

	* configure.in: Don't use -Wunused-parameter with g++.

2004-09-21  Malcolm Purvis  <malcolmp@xemacs.org>

	* configure.in: Unused parameter and variables warnings are GCC 3
	or greater.

2004-09-14  Jerry James  <james@xemacs.org>

	* configure.in (TAB): Add unused parameter and variables warnings
	to gcc CFLAGS.

2004-09-20  Jerry James  <james@xemacs.org>

	* INSTALL: Update Canna description to reflect recent changes.

2004-09-11  Malcolm Purvis  <malcolmp@xemacs.org>

	* configure.in Check for sys/resource.h, sys/vlimit.h, getrlimit()
	and vlimit().

2004-09-10  Malcolm Purvis  <malcolmp@xemacs.org>

	* INSTALL: A POSIX compatible Make is required for builds.
	* Makefile.in.in: Enable support for parallel builds.

2004-08-12  "Johann 'Myrkraverk' Oskarsson" <myrkraverk@users.sourceforge.net>

	* config.guess: Identify PlayStation2.

2004-06-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.in: Character classes in globs don't work, die when