@@ -1,3 +1,7 @@
+2004-11-12  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>
+
+	* Makefile.in.in (install-arch-dep): Fix installation for Cygwin.
+
 2004-10-26  Ben Wing  <ben@xemacs.org>
 
 	* configure.in (AC_INIT_NOTICE):
